test/programs/error-overlapping-patterns-ellipses.expected
error[E008]: overlapping patterns
./test/programs/error-overlapping-patterns-ellipses.defs:1:6
   |
 1 | (def (a b ($x c $y) .. d) _)
   |      ^^^^^^^^^^^^^^^^^^^^ this pattern may match the same term as ...
./test/programs/error-overlapping-patterns-ellipses.defs:2:6
   |
 2 | (def (a b ($x $y $z)   d) _)
   |      ^^^^^^^^^^^^^^^^^^^^ ... this other pattern
help: patterns possibly matching the same term are not allowed
