test/programs/error-overlapping-patterns-ellipses.defs
(def (a b ($x c $y) .. d) _)
(def (a b ($x $y $z)   d) _)